--- a/styles/style.css
+++ b/styles/style.css
@@ -126,7 +126,7 @@ body{
     font-weight: 400;
 }
 
-@media (max-width: 1200px) { 
+@media (min-width:400px) and (max-width: 1200px) { 
    .cabecalho {
     padding: 10%;
    }
