--- a/styles/style.css
+++ b/styles/style.css
@@ -54,7 +54,7 @@ body{
 
 
 .apresentacao__conteudo{
-    width: 50%;
+    width: auto;
     display: flex;
     flex-direction: column;
     gap: 40px;
@@ -94,7 +94,7 @@ body{
     justify-content: center;
     gap: 16px;
     border: 2px solid var(--cor-terciaria);
-    width: 50%;
+    width: auto;
     text-align: center;
     border-radius: 8px;
     font-size: 1.5rem;
